@@ -6,6 +6,7 @@ debsig-verify (0.9) UNRELEASED; urgency=low
   * Add missing space before Build-Depends version.
   * Bump Standard-Version to 3.9.5 (no changed needed).
   * Stop making build-indep depend on build-stamp in debian/rules.
+  * Stop using a build-stamp in debian/rules.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 11 May 2014 05:35:13 +0200
 
